# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-31 22:43:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-39

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-39


    new files:
     Python/Exceptions/.arch-ids/=id Python/Exceptions/ExcTypes.hsc

    modified files:
     ChangeLog MissingPy.cabal

    new directories:
     Python/Exceptions Python/Exceptions/.arch-ids


2005-01-31 22:00:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-38

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-38


    modified files:
     ChangeLog Python/Exceptions.hs Python/Objects.hs
     Python/Utils.hs testsrc/Exceptionstest.hs


2005-01-31 21:32:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-37

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-37


    modified files:
     ChangeLog Python/Interpreter.hsc testsrc/Interpretertest.hs


2005-01-31 21:27:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-36

    Summary:
      Working on exceptions
    Revision:
      missingexts--head--0.7--patch-36


    new files:
     testsrc/Exceptionstest.hs

    modified files:
     ChangeLog Python/Exceptions.hs Python/Interpreter.hsc
     Python/Types.hs Python/Utils.hs glue/glue.c
     testsrc/Objectstest.hs testsrc/Tests.hs


2005-01-31 20:37:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-35

    Summary:
      removed debug code
    Revision:
      missingexts--head--0.7--patch-35


    modified files:
     ChangeLog Python/Interpreter.hsc testsrc/Interpretertest.hs


2005-01-31 20:34:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-34

    Summary:
      attribute access and method calls working
    Revision:
      missingexts--head--0.7--patch-34


    modified files:
     ChangeLog Python/Objects.hs testsrc/Objectstest.hs

