@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-31 22:56:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-40
+
+    Summary:
+      Checkpointing exception handling
+    Revision:
+      missingexts--head--0.7--patch-40
+
+
+    modified files:
+     ChangeLog Python/Exceptions.hs
+
+
 2005-01-31 22:43:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-39
 
     Summary:
